<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:keepScreenOn="true"
        android:background="@color/White"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.5"
        android:gravity="center"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".05" />

    <pl.droidsonroids.gif.GifImageView
                    android:layout_width="0dp"
        android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
        android:background="@color/White"
                    android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".05" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:gravity="center"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="8dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />
                    <TableRow
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        >
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:background="@mipmap/user"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2">

                            <EditText
                                android:id="@+id/login_uname"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/Username"
                                android:inputType="text"
                                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@."
                                android:maxLength="50"
                                android:textColor="@color/colorPrimaryDark"
                                android:textColorHint="@color/colorPrimaryDark"/>
                        </android.support.design.widget.TextInputLayout>
                    </TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />

                </TableRow>


                <!-- Password Label -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />
                    <TableRow
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="2"
                        >

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:src="@mipmap/pass" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textpassword"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/login_pwd"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/Password"
                                android:inputType="textPassword"
                                android:maxLength="20"
                                android:textColor="@color/colorPrimaryDark"
                                android:textColorHint="@color/colorPrimaryDark"/>
                        </android.support.design.widget.TextInputLayout>
                    </TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />

                </TableRow>


                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />

                    <Button
                        android:id="@+id/btnsignin"
                        style="@style/ButtonText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:background="@drawable/button"
                        android:text="@string/Signin"
                        android:textColor="@color/White"/>



                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />
                </TableRow>



                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />
                <TableRow
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/fb"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/google"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/twitter"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />

                </TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight=".1" />
                </TableRow>

            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".3" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>
